# mcp_docker

./: README.md  commands.md  pyproject.toml  run.sh  version.py
app/: google_maps.py  main.py  mcp_server.py  weather.py
docker/: Dockerfile  docker-compose.yml
tests/: test_client.py
